linux name added

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
        
         <div class="box">
           <i class="fab fa-linux fa-4x"></i>
+          <p>Linux</p>
           <!-- <p>
             <a
               href="https://www.coursera.org/account/accomplishments/certificate/EYD9SHVG3KQ5"
