--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <div class="user_img">
         <img
-          src="https://media.giphy.com/media/HEPwfdu6T6svpPE1eN/giphy.gif"
+          src="akashIMG.jpeg"
           alt=""
         />
       </div>
