--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <p>CLOUD and DevOps Enthusiast</p>
         <a href="#About" class="btn">About Me</a>
         <a href="akash-resume.pdf" class="btn">My Resume</a>
+        target="_blank_"
       </div>
       <div class="user_img">
         <img
