--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <h1 class="user_name">Akash Pawar</h1>
         <p>CLOUD and DevOps Enthusiast</p>
         <a href="#About" class="btn">About Me</a>
-        <a href="akash-resume.pdf" class="btn">My Resume</a>
-        target="_blank_"
+        <a href="akash-resume.pdf" class="btn" target="_blank_">My Resume</a>
+          
       </div>
       <div class="user_img">
         <img
