docker name added

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 
         <div class="box">
           <i class="fab fa-docker fa-4x"></i>
+          <p>Docker</p>
           <!-- <p>
             <a
               href="https://kodekloud.com/certificate-verification/7A57A5FA0C-7A51A1736A-7A5172E9BE/"
