new cicd for ecs

--- a/index.html
+++ b/index.html
@@ -264,6 +264,29 @@
             </div>
           </div>
         </div>
+
+        <div class="main_box center">
+          <div class="icon center">
+            <i class="fab fa-aws"></i>
+          </div>
+          <div class="box">
+            <h1>aws cicd for ECS tasks with load balancer</h1>
+            <p>
+              <em
+                >ECS | IAM | github | codeBuild | codePipeline | CloudWatch | Load Balancer </em
+              >
+              <div class="links">
+              <a
+                href="https://github.com/Akashp202k/aws-cicd-ecs"
+                target="_blank_"
+                >Check here<i class="fas fa-arrow-right"></i
+              ></a>
+            </div>
+            </p>
+            
+          </div>
+        </div>
+
       </div>
     </section>
 
