new terrafor + sam project added

--- a/index.html
+++ b/index.html
@@ -287,6 +287,29 @@
           </div>
         </div>
 
+        <!-- Terrafor + AWS SAM Integration -->
+        <div class="main_box center">
+          <div class="icon center">
+            <i class="fab fa-aws"></i>
+          </div>
+          <div class="box">
+            <h1>Terraform & AWS SAM Integration</h1>
+            <p>
+              <em
+                >Terraform | AWS SAM | AWS CloudWatch | AWS Lambda | AWS SNS </em
+              >
+              <div class="links">
+              <a
+                href="https://github.com/Akashp202k/terraform_AWS-SAM_Integration"
+                target="_blank_"
+                >Check here<i class="fas fa-arrow-right"></i
+              ></a>
+            </div>
+            </p>
+            
+          </div>
+        </div>
+
       </div>
     </section>
 
