--- a/index.html
+++ b/index.html
@@ -251,13 +251,14 @@
             <i class="fas fa-cloud"></i>
           </div>
           <div class="box">
-            <h1>Launch Ec2 using terraform</h1>
+            <h1>Private Secure network Infra with Terraform</h1>
             <p>
-              terraform | aws 
+              terraform | Aws | Ec2 | Vpc | Eip | NAT | OpenVPN-server
+
             </p>
             <div class="links">
               <a
-                href="https://github.com/Akashp202k/tf-ec2-instance"
+                href="https://github.com/Akashp202k/Secure-Network-Infra-With-Terraform-aws"
                 target="_blank_"
                 >Check here<i class="fas fa-arrow-right"></i
               ></a>
@@ -287,20 +288,20 @@
           </div>
         </div>
 
-        <!-- Terrafor + AWS SAM Integration -->
+        <!-- wordpress-terraform  -->
         <div class="main_box center">
           <div class="icon center">
             <i class="fab fa-aws"></i>
           </div>
           <div class="box">
-            <h1>Terraform & AWS SAM Integration</h1>
+            <h1>Deploy Statefull Web With Terraform</h1>
             <p>
               <em
-                >Terraform | AWS SAM | AWS CloudWatch | AWS Lambda | AWS SNS </em
+                >Terraform | AWS | Wordpress | Docker | RDS </em
               >
               <div class="links">
               <a
-                href="https://github.com/Akashp202k/terraform_AWS-SAM_Integration"
+                href="https://github.com/Akashp202k/freelancing-client-1-assignment-1"
                 target="_blank_"
                 >Check here<i class="fas fa-arrow-right"></i
               ></a>
