--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <h1 class="user_name">Akash Pawar</h1>
         <p>CLOUD and DevOps Enthusiast</p>
         <a href="#About" class="btn">About Me</a>
-        <a href="akash-resume.pdf" class="btn" target="_blank_">My Resume</a>
+        <a href="docs/akash-resume.pdf" class="btn" target="_blank_">My Resume</a>
           
       </div>
       <div class="user_img">
         <img
-          src="akashIMG.jpeg"
+          src="docs/akashIMG.jpeg"
           alt=""
         />
       </div>
@@ -99,7 +99,7 @@
             <i class="fab fa-java fa-4x"></i>
             <p>
               <a
-                href="javaSpringBoard.pdf"
+                href="docs/javaSpringBoard.pdf"
                 target="_blank_"
                 >Java</a
               >
