--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
         </p>
       </div>
 
-      <div class="box">
+      <!-- <div class="box">
         <i class="fab fa-aws fa-4x"></i>
         <p>Cloud</p>
         <p>
           <a href="https://www.credly.com/badges/57394c5f-f9b1-4d00-b9d8-1cea8707aab1" target="_blank_">AWS Certified
             Solution Architect-Associate</a>
         </p>
-      </div>
+      </div> -->
 
       <div class="box">
         <i class="fab fa-aws fa-4x"></i>
