--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <p>
             <em>Terraform | AWS | Wordpress | Docker | RDS </em>
           <div class="links">
-            <a href="https://github.com/Akashp202k/freelancing-client-1-assignment-1" target="_blank_">Check here<i
+            <a href="https://github.com/akash202k/freelancing-client-1-assignment-1" target="_blank_">Check here<i
                 class="fas fa-arrow-right"></i></a>
           </div>
           </p>
@@ -175,7 +175,7 @@
 
           </p>
           <div class="links">
-            <a href="https://github.com/Akashp202k/Secure-Network-Infra-With-Terraform-aws" target="_blank_">Check
+            <a href="https://github.com/akash202k/Secure-Network-Infra-With-Terraform-aws" target="_blank_">Check
               here<i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
@@ -193,7 +193,7 @@
               GoDaddyDNS | maven
             </em>
           <div class="links">
-            <a href="https://github.com/Akashp202k/ReArchitecting-WebApps-On-AWS-Cloud" target="_blank_">Check here<i
+            <a href="https://github.com/akash202k/ReArchitecting-WebApps-On-AWS-Cloud" target="_blank_">Check here<i
                 class="fas fa-arrow-right"></i></a>
           </div>
           </p>
@@ -213,7 +213,7 @@
           <p>
             <em>S3 | IAM | Elastic BeanStalk | codeCommit | codeBuild | codeDeploy | codePipeline | CloudWatch | </em>
           <div class="links">
-            <a href="https://github.com/Akashp202k/aws-CICD" target="_blank_">Check here<i
+            <a href="https://github.com/akash202k/aws-CICD" target="_blank_">Check here<i
                 class="fas fa-arrow-right"></i></a>
           </div>
           </p>
@@ -236,7 +236,7 @@
             </em>
           </p>
           <div class="links">
-            <a href="https://github.com/Akashp202k/docker" target="_blank_">Check here<i
+            <a href="https://github.com/akash202k/docker" target="_blank_">Check here<i
                 class="fas fa-arrow-right"></i></a>
           </div>
         </div>
@@ -254,7 +254,7 @@
           <p>
             <em>ECS | IAM | github | codeBuild | codePipeline | CloudWatch | Load Balancer </em>
           <div class="links">
-            <a href="https://github.com/Akashp202k/aws-cicd-ecs" target="_blank_">Check here<i
+            <a href="https://github.com/akash202k/aws-cicd-ecs" target="_blank_">Check here<i
                 class="fas fa-arrow-right"></i></a>
           </div>
           </p>
@@ -277,7 +277,7 @@
       <a href="mailto:akashpawar202k@gmail.com" target="_blank_">
         <i class="fas fa-envelope"></i>
       </a>
-      <a href="https://github.com/Akashp202k" target="_blank_">
+      <a href="https://github.com/akash202k" target="_blank_">
         <i class="fab fa-github"></i>
       </a>
       <a href="https://www.upwork.com/freelancers/~0107f7afeed4500d49" target="_blank_">
