--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1 class="user_name">Akash Pawar</h1>
       <p>CLOUD and DevOps Enthusiast</p>
       <a href="#About" class="btn">About Me</a>
-      <a href="docs/akash-resume.pdf" class="btn" target="_blank_">My Resume</a>
+      <a href="docs/akash.pdf" class="btn" target="_blank_">Download Resume</a>
 
     </div>
     <div class="user_img">
